closes #24 - code fragments no longer wrap after 10 lines. Also removed some duplicate posts

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,10 +31,8 @@ pre {
   code .line::before {
     content: counter(step);
     counter-increment: step;
-    width: 1rem;
-    margin-right: 1.5rem;
+    width: 2rem;
     display: inline-block;
-    text-align: right;
     color: rgba(126, 143, 150, 0.834);
   }
 }
